--- a/config.json
+++ b/config.json
@@ -2,8 +2,18 @@
   "server": {
     "host": "0.0.0.0",
     "port": "8080"
+  },
+  "database": {
+    "driver": "mysql",
+    "username": "dbuser",
+    "password": "password",
+    "host": "127.0.0.1",
+    "port": "3306",
+    "name": "mystixapi"
+  },
+  "logger": {
+    "debug": true,
+    "logfile_path": "./log/",
+    "logfile_name": "first_go_app.log"
   }
-
-
-
 }
